re-publish bug fixed
readme and license files

--- a/VarnishPurge/App_Config/Include/VarnishPipeline.config
+++ b/VarnishPurge/App_Config/Include/VarnishPipeline.config
@@ -19,7 +19,7 @@
       <!-- Sitecore site. Used to get proper URLs from items -->
       <setting name="Varnish.Site" value="website" />
 
-      <!-- HTTP Method used. Common values are "PURGE" or "DELETE", depending on your cache server implmentation -->
+      <!-- HTTP Method used. Common values are "PURGE" or "DELETE", depending on your cache server implementation -->
       <setting name="Varnish.Method" value="PURGE" />
 		</settings>
 	</sitecore>
