--- a/VarnishPurge/ClearPeople.VarnishPurge.csproj
+++ b/VarnishPurge/ClearPeople.VarnishPurge.csproj
@@ -52,6 +52,9 @@
     <None Include="App_Config\Include\VarnishPipeline.config" />
     <None Include="ClearPeople.VarnishPurge.csproj.nuspec" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="License.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
