--- a/VarnishPurge/ClearPeople.VarnishPurge.csproj
+++ b/VarnishPurge/ClearPeople.VarnishPurge.csproj
@@ -28,6 +28,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\ClearPeople.VarnishPurge.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sitecore.Kernel, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -44,13 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VarnishCache.cs" />
     <Compile Include="VarnishPurgeProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VarnishSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App_Config\Include\VarnishPipeline.config" />
-    <None Include="ClearPeople.VarnishPurge.csproj.nuspec" />
+    <None Include="ClearPeople.VarnishPurge.csproj.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="License.txt" />
