--- a/VarnishPurge/App_Config/Include/VarnishPipeline.config
+++ b/VarnishPurge/App_Config/Include/VarnishPipeline.config
@@ -22,6 +22,9 @@
       <!-- HTTP Method used. Common values are "PURGE" or "DELETE", depending on your cache server implementation -->
       <setting name="Varnish.Method" value="PURGE" />
 
+      <!-- HTTP Method used for full cache clearing. Default value is "BAN" -->
+      <setting name="Varnish.ClearMethod" value="BAN" />
+
       <!-- String to be appended to log messages. This string will be enclosed between "[" and "]" and added to every log message, to help finding them. -->
       <setting name="Varnish.LogHeader" value="Varnish" />
 		</settings>
