simplify default settings values

--- a/VarnishPurge/App_Config/Include/VarnishPipeline.config
+++ b/VarnishPurge/App_Config/Include/VarnishPipeline.config
@@ -11,10 +11,10 @@
       <setting name="Varnish.Enabled" value="true" />
       
       <!-- Actual Varnish server URL (Must start with "HTTP://"), proxy free -->
-      <setting name="Varnish.Url" value="http://your_varnish_frontend_url" />
+      <setting name="Varnish.Url" value="http://varnish_frontend_url" />
       
 			<!-- Direct host to avoid proxies like CloudFlare. If not empty, WebRequest will go to "Varnish.Url", with a HOST HTTP Header with this value -->
-      <setting name="Varnish.Direct.Host" value="your.proxyfree_varnish_domain.com" />
+      <setting name="Varnish.Direct.Host" value="proxyfree.domain.com" />
       
       <!-- Sitecore site. Used to get proper URLs from items -->
       <setting name="Varnish.Site" value="website" />
